# okapi

examples/custom_schema/: Cargo.toml
examples/json-web-api/: Cargo.toml
examples/secure_request_guard/: Cargo.toml
examples/special-types/: Cargo.toml
examples/uuid/: Cargo.toml
rocket-okapi/: Cargo.toml
rocket-okapi-codegen/: Cargo.toml
rocket-okapi-codegen/src/openapi_attr/: doc_attr.rs  mod.rs
rocket-okapi/src/handlers/: content.rs
rocket-okapi/src/request/: mod.rs
rocket-okapi/src/response/: responder_impls.rs
